минимальная работа калькулятора. появляются цифры и операции на экране, работают +-/*

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 <body>
     <div class="container">
       <div class="display">
-        <input type="text" placeholder="0">
+        <input id="screen" type="text" placeholder="0">
       </div>
 
       <div class="buttons">
         <div class="row">
           <button class="btn">AC</button>
           <button class="btn">x^2</button>
-          <button class="btn">sqrt</button>
-          <button class="btn">/</button>
+          <button class="btn">√</button>
+          <button class="btn">÷</button>
         </div>
         <div class="row">
           <button class="btn">7</button>
@@ -27,7 +27,7 @@
           <button class="btn">4</button>
           <button class="btn">5</button>
           <button class="btn">6</button>
-          <button class="btn">-</button>
+          <button class="btn">–</button>
         </div>
         <div class="row">
           <button class="btn">1</button>
@@ -39,9 +39,10 @@
           <button class="btn"><-</button>
           <button class="btn">0</button>
           <button class="btn">.</button>
-          <button class="btn">=</button>
+          <button id="equal">=</button>
         </div>
       </div>
     </div>
 </body>
+<script src="script.js"></script>
 </html>
