работают все кнопки, очищение, удалить символ, степень, корень

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
       <div class="buttons">
         <div class="row">
-          <button class="btn">AC</button>
-          <button class="btn">x^2</button>
-          <button class="btn">√</button>
+          <button onclick="clearAll()">C</button>
+          <button onclick="pow()">x<sup>2</sup></button>
+          <button onclick="sqrt()">√</button>
           <button class="btn">÷</button>
         </div>
         <div class="row">
@@ -36,10 +36,10 @@
           <button class="btn">+</button>
         </div>
         <div class="row">
-          <button class="btn"><-</button>
+          <button onclick="backSpace()"><-</button>
           <button class="btn">0</button>
           <button class="btn">.</button>
-          <button id="equal">=</button>
+          <button onclick="equal()">=</button>
         </div>
       </div>
     </div>
