--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -18,25 +19,25 @@
           <button class="btn">÷</button>
         </div>
         <div class="row">
-          <button class="btn">7</button>
-          <button class="btn">8</button>
-          <button class="btn">9</button>
+          <button class="btn number">7</button>
+          <button class="btn number">8</button>
+          <button class="btn number">9</button>
           <button class="btn">x</button>
         </div>
         <div class="row">
-          <button class="btn">4</button>
-          <button class="btn">5</button>
-          <button class="btn">6</button>
+          <button class="btn number">4</button>
+          <button class="btn number">5</button>
+          <button class="btn number">6</button>
           <button class="btn">–</button>
         </div>
         <div class="row">
-          <button class="btn">1</button>
-          <button class="btn">2</button>
-          <button class="btn">3</button>
+          <button class="btn number">1</button>
+          <button class="btn number">2</button>
+          <button class="btn number">3</button>
           <button class="btn">+</button>
         </div>
         <div class="row">
-          <button onclick="backSpace()"><-</button>
+          <button onclick="backSpace()"><−</button>
           <button class="btn">0</button>
           <button class="btn">.</button>
           <button onclick="equal()">=</button>
