--- a/index.html
+++ b/index.html
@@ -1,49 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Calculator</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Calculator</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-      <div class="display">
-        <input id="screen" type="text" placeholder="0">
-      </div>
+<div class="container">
+  <div class="display">
+    <input id="screen" type="text" placeholder="0">
+  </div>
 
-      <div class="buttons">
-        <div class="row">
-          <button onclick="clearAll()">C</button>
-          <button onclick="pow()">x<sup>2</sup></button>
-          <button onclick="sqrt()">√</button>
-          <button class="btn">÷</button>
-        </div>
-        <div class="row">
-          <button class="btn number">7</button>
-          <button class="btn number">8</button>
-          <button class="btn number">9</button>
-          <button class="btn">x</button>
-        </div>
-        <div class="row">
-          <button class="btn number">4</button>
-          <button class="btn number">5</button>
-          <button class="btn number">6</button>
-          <button class="btn">–</button>
-        </div>
-        <div class="row">
-          <button class="btn number">1</button>
-          <button class="btn number">2</button>
-          <button class="btn number">3</button>
-          <button class="btn">+</button>
-        </div>
-        <div class="row">
-          <button onclick="backSpace()"><−</button>
-          <button class="btn">0</button>
-          <button class="btn">.</button>
-          <button onclick="equal()">=</button>
-        </div>
-      </div>
+  <div class="buttons">
+    <div class="row">
+      <button onclick="clearAll()">C</button>
+      <button onclick="pow()">x²</button>
+      <button onclick="sqrt()">√</button>
+      <button class="btn">÷</button>
     </div>
+    <div class="row">
+      <button class="btn number">7</button>
+      <button class="btn number">8</button>
+      <button class="btn number">9</button>
+      <button class="btn">×</button>
+    </div>
+    <div class="row">
+      <button class="btn number">4</button>
+      <button class="btn number">5</button>
+      <button class="btn number">6</button>
+      <button class="btn">–</button>
+    </div>
+    <div class="row">
+      <button class="btn number">1</button>
+      <button class="btn number">2</button>
+      <button class="btn number">3</button>
+      <button class="btn">+</button>
+    </div>
+    <div class="row">
+      <button onclick="backSpace()">←</button>
+      <button class="btn">0</button>
+      <button class="btn">.</button>
+      <button onclick="equal()">=</button>
+    </div>
+  </div>
+</div>
 </body>
 <script src="script.js"></script>
 </html>
